# cursword

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  bible.cpp  bible.h  display.cpp  display.h  format_str.cpp  format_str.h  format_text.cpp  format_text.h  main.cpp  session.cpp  session.h  txtutils.cpp  txtutils.h  user.cpp  user.h
